Changed Apache configs to accommodate of 2.4 way of providing access.

--- a/carcass/vagrant/backend.apache2.conf
+++ b/carcass/vagrant/backend.apache2.conf
@@ -8,7 +8,10 @@ Listen 81
         Options Indexes FollowSymLinks
         AllowOverride All
         Order deny,allow
+        # Old Apache 2.2 way
         Allow from all
+        # New Apache 2.4 way
+        Require all granted
         Satisfy all
     </Directory>
     DocumentRoot /vagrant/backend/www
