--- a/carcass/vagrant/frontend.apache2.conf
+++ b/carcass/vagrant/frontend.apache2.conf
@@ -7,7 +7,10 @@
         Options Indexes FollowSymLinks
         AllowOverride All
         Order deny,allow
+        # Old Apache 2.2 way
         Allow from all
+        # New Apache 2.4 way
+        Require all granted
         Satisfy all
     </Directory>
     DocumentRoot /vagrant/frontend/www
