--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "behat/mink-extension": "v1.2.0",
         "behat/mink-selenium2-driver": "v1.1.1",
         "behat/mink-goutte-driver": "v1.0.9",
-        "netwing/selenium-server-standalone": "2.37.0"
+        "netwing/selenium-server-standalone": "2.37.0",
+        "phploc/phploc": "2.0.3"
     },
     "require-dev": { },
     "minimum-stability": "dev",
