--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "behat/mink-selenium2-driver": "v1.1.1",
         "behat/mink-goutte-driver": "v1.0.9",
         "netwing/selenium-server-standalone": "2.37.0",
-        "phploc/phploc": "2.0.3"
+        "phploc/phploc": "2.0.3",
+        "pdepend/pdepend": "1.1.3"
     },
     "require-dev": { },
     "minimum-stability": "dev",
