--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "behat/mink-goutte-driver": "v1.0.9",
         "netwing/selenium-server-standalone": "2.37.0",
         "phploc/phploc": "2.0.3",
-        "pdepend/pdepend": "1.1.3"
+        "pdepend/pdepend": "1.1.3",
+        "phpmd/phpmd": "1.5.0"
     },
     "require-dev": { },
     "minimum-stability": "dev",
