--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "netwing/selenium-server-standalone": "2.37.0",
         "phploc/phploc": "2.0.3",
         "pdepend/pdepend": "1.1.3",
-        "phpmd/phpmd": "1.5.0"
+        "phpmd/phpmd": "1.5.0",
+        "sebastian/phpcpd": "2.0.0"
     },
     "minimum-stability": "dev",
     "config": {
