--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "phploc/phploc": "2.0.3",
         "pdepend/pdepend": "1.1.3",
         "phpmd/phpmd": "1.5.0",
-        "sebastian/phpcpd": "2.0.0"
+        "sebastian/phpcpd": "2.0.0",
+        "squizlabs/php_codesniffer": "1.5.0"
     },
     "minimum-stability": "dev",
     "config": {
