--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "pdepend/pdepend": "1.1.3",
         "phpmd/phpmd": "1.5.0",
         "sebastian/phpcpd": "2.0.0",
-        "squizlabs/php_codesniffer": "1.5.0"
+        "squizlabs/php_codesniffer": "1.5.0",
+        "mayflower/php-codebrowser": "1.0.4"
     },
     "minimum-stability": "dev",
     "config": {
