--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "phpmd/phpmd": "1.5.0",
         "sebastian/phpcpd": "2.0.0",
         "squizlabs/php_codesniffer": "1.5.0",
-        "mayflower/php-codebrowser": "1.0.4"
+        "mayflower/php-codebrowser": "1.0.4",
+        "apigen/apigen": "2.8.0"
     },
     "minimum-stability": "dev",
     "config": {
